--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dew. - Personal Portfolio</title>
+	<title>Filipe Morelli - Personal Portfolio</title>
 	<link rel="icon" href="assets\img\favicon.ico" type="image/x-icon">
 
 	<!-- CSS PLUGIN -->
@@ -50,7 +50,7 @@
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="logo">
-						<a href="index.html">Dew.</a>
+						<a href="index.html">Filipe Morelli</a>
 					</div>
 				</div>
 
@@ -577,7 +577,7 @@
 				<div class="address-icons col-md-8 col-md-offset-2">
 					<div class="col-md-4 col-sm-4">
 						<i class="fa fa-envelope-o fa-2x"></i>
-						<p>dew@email.com</p>
+						<p>Filipe Morelliemail.com</p>
 					</div>
 
 					<div class="col-md-4 col-sm-4">
@@ -666,7 +666,7 @@
 					</li>
 				</ul>
 
-				<p>© 2018 Dew. made by vavelo</p>
+				<p>© 2018 Filipe Morelli made by vavelo</p>
 			</div>
 		</div>
 	</footer>
