--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Filipe Morelli - Personal Portfolio</title>
-	<link rel="icon" href="assets\img\favicon.ico" type="image/x-icon">
+	<link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 
 	<!-- CSS PLUGIN -->
-	<link rel="stylesheet" href="assets\css\bootstrap.min.css">
-	<link rel="stylesheet" href="assets\css\font-awesome.min.css">
-	<link rel="stylesheet" href="assets\css\owl.carousel.css">
-	<link rel="stylesheet" href="assets\css\owl.theme.css">
-	<link rel="stylesheet" href="assets\css\magnific-popup.css">
-	<link rel="stylesheet" href="assets\css\flexslider.css">
-	<link rel="stylesheet" href="assets\css\aos.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="assets/css/owl.carousel.css">
+	<link rel="stylesheet" href="assets/css/owl.theme.css">
+	<link rel="stylesheet" href="assets/css/magnific-popup.css">
+	<link rel="stylesheet" href="assets/css/flexslider.css">
+	<link rel="stylesheet" href="assets/css/aos.css">
 
 	<!-- MAIN STYLE -->
-	<link rel="stylesheet" href="assets\css\style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- RESPONSIVES STYLE -->
-	<link rel="stylesheet" href="assets\css\style-responsives.css">
+	<link rel="stylesheet" href="assets/css/style-responsives.css">
 
 	<!-- GOOGLE FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Hind:600|Lato:300,400" rel="stylesheet">
@@ -110,7 +110,7 @@
 							<div class="home-text">
 								<!-- profile picture -->
 								<div class="profile-pic" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
-									<img src="assets\img\me.jpg" height="500" class="img-responsive" alt="">
+									<img src="assets/img/me.jpg" height="500" class="img-responsive" alt="">
 								</div>
 
 								<!-- home title -->
@@ -302,9 +302,9 @@
 						<div id="port-image" class="container">
 							<div class="row">
 								<div class="website grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets\img\portfolio\portfolio-1.jpg" class="image-popup">
+									<a href="assets/img/portfolio/portfolio-1.jpg" class="image-popup">
 										<figure class="port-desc">
-											<img src="assets\img\portfolio\portfolio-1.jpg" class="img-responsive" alt="Work 1">
+											<img src="assets/img/portfolio/portfolio-1.jpg" class="img-responsive" alt="Work 1">
 											<figcaption>
 												<h4>Project One</h4>
 												<h5>Website</h5>
@@ -314,9 +314,9 @@
 								</div>
 
 								<div class="website grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets\img\portfolio\portfolio-2.jpg" class="image-popup">
+									<a href="assets/img/portfolio/portfolio-2.jpg" class="image-popup">
 										<figure class="port-desc">
-											<img src="assets\img\portfolio\portfolio-2.jpg" class="img-responsive" alt="Work 1">
+											<img src="assets/img/portfolio/portfolio-2.jpg" class="img-responsive" alt="Work 1">
 											<figcaption>
 												<h4>Project Two</h4>
 												<h5>Website</h5>
@@ -326,9 +326,9 @@
 								</div>
 
 								<div class="photography grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets\img\portfolio\portfolio-3.jpg" class="image-popup">
+									<a href="assets/img/portfolio/portfolio-3.jpg" class="image-popup">
 										<figure class="port-desc">
-											<img src="assets\img\portfolio\portfolio-3.jpg" class="img-responsive" alt="Work 1">
+											<img src="assets/img/portfolio/portfolio-3.jpg" class="img-responsive" alt="Work 1">
 											<figcaption>
 												<h4>Project Three</h4>
 												<h5>Photography</h5>
@@ -338,9 +338,9 @@
 								</div>
 
 								<div class="photography grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets\img\portfolio\portfolio-4.jpg" class="image-popup">
+									<a href="assets/img/portfolio/portfolio-4.jpg" class="image-popup">
 										<figure class="port-desc">
-											<img src="assets\img\portfolio\portfolio-4.jpg" class="img-responsive" alt="Work 1">
+											<img src="assets/img/portfolio/portfolio-4.jpg" class="img-responsive" alt="Work 1">
 											<figcaption>
 												<h4>Project Four</h4>
 												<h5>Photography</h5>
@@ -350,9 +350,9 @@
 								</div>
 
 								<div class="design grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets\img\portfolio\portfolio-5.jpg" class="image-popup">
+									<a href="assets/img/portfolio/portfolio-5.jpg" class="image-popup">
 										<figure class="port-desc">
-											<img src="assets\img\portfolio\portfolio-5.jpg" class="img-responsive" alt="Work 1">
+											<img src="assets/img/portfolio/portfolio-5.jpg" class="img-responsive" alt="Work 1">
 											<figcaption>
 												<h4>Project Five</h4>
 												<h5>Design</h5>
@@ -362,9 +362,9 @@
 								</div>
 
 								<div class="design grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets\img\portfolio\portfolio-6.jpg" class="image-popup">
+									<a href="assets/img/portfolio/portfolio-6.jpg" class="image-popup">
 										<figure class="port-desc">
-											<img src="assets\img\portfolio\portfolio-6.jpg" class="img-responsive" alt="Work 1">
+											<img src="assets/img/portfolio/portfolio-6.jpg" class="img-responsive" alt="Work 1">
 											<figcaption>
 												<h4>Project Six</h4>
 												<h5>Design</h5>
@@ -520,7 +520,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="blog-item">
 						<a href="single.html" class="blog-img">
-							<img src="assets\img\blog\blog-1.jpg" class="img-responsive" alt="Blog 1">
+							<img src="assets/img/blog/blog-1.jpg" class="img-responsive" alt="Blog 1">
 						</a>
 						<div class="blog-desc">
 							<h4>
@@ -535,7 +535,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="blog-item">
 						<a href="single.html" class="blog-img">
-							<img src="assets\img\blog\blog-2.jpg" class="img-responsive" alt="Blog 2">
+							<img src="assets/img/blog/blog-2.jpg" class="img-responsive" alt="Blog 2">
 						</a>
 						<div class="blog-desc">
 							<h4>
@@ -550,7 +550,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="blog-item">
 						<a href="single.html" class="blog-img">
-							<img src="assets\img\blog\blog-3.jpg" class="img-responsive" alt="Blog 3">
+							<img src="assets/img/blog/blog-3.jpg" class="img-responsive" alt="Blog 3">
 						</a>
 						<div class="blog-desc">
 							<h4>
@@ -676,31 +676,31 @@
 
 
 	<!-- JS PLUGIN -->
-	<script src="assets\js\jquery.js"></script>
-	<script src="assets\js\bootstrap.min.js"></script>
-	<script src="assets\js\jquery.stellar.min.js"></script>
-	<script src="assets\js\text-rotate.js"></script>
-	<script src="assets\js\numscroller.js"></script>
-	<script src="assets\js\owl.carousel.min.js"></script>
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/jquery.stellar.min.js"></script>
+	<script src="assets/js/text-rotate.js"></script>
+	<script src="assets/js/numscroller.js"></script>
+	<script src="assets/js/owl.carousel.min.js"></script>
 	<script src="assets/js/jquery.wow.min.js"></script>
-	<script src="assets\js\jquery.appear.js"></script>
+	<script src="assets/js/jquery.appear.js"></script>
 	<script src="assets/js/masonry/imagesloaded.pkgd.min.js"></script>
-	<script src="assets\js\progress-bar.min.js"></script>
-	<script src="assets\js\jquery.mixitup.js"></script>
-	<script src="assets\js\jquery.magnific-popup.min.js"></script>
-	<script src="assets\js\magnific-popup-options.js"></script>
-	<script src="assets\js\jquery.flexslider-min.js"></script>
-	<script src="assets\js\aos.js"></script>
-	<script src="assets\js\app.js"></script>
-	<script src="assets\js\jquery.form.js"></script>
-	<script src="assets\js\jquery.validate.min.js"></script>
-	<script src="assets\js\jquery.mb.YTPlayer.min.js"></script>
+	<script src="assets/js/progress-bar.min.js"></script>
+	<script src="assets/js/jquery.mixitup.js"></script>
+	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="assets/js/magnific-popup-options.js"></script>
+	<script src="assets/js/jquery.flexslider-min.js"></script>
+	<script src="assets/js/aos.js"></script>
+	<script src="assets/js/app.js"></script>
+	<script src="assets/js/jquery.form.js"></script>
+	<script src="assets/js/jquery.validate.min.js"></script>
+	<script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
 	<script type="text/javascript">
 		$('.player').mb_YTPlayer();
 	</script>
 
 	<!-- MAIN JS -->
-	<script src="assets\js\main.js"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 
 </html>
