Redução de scrips e mudar o nome

--- a/index.html
+++ b/index.html
@@ -115,11 +115,9 @@
 
 								<!-- home title -->
 								<div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
-									<h1>Hi, I'm James William</h1>
+									<h1>Hi, I'm Filipe Mprelli</h1>
 									<h3 id="text-rotator">
-										<div>Web Designer</div>
-										<div>UI Designer</div>
-										<div>Front-End Developer</div>
+										<div>Analista de Sistemas de Informação e Desenvolvedor FullStack</div>
 									</h3>
 								</div>
 							</div>
@@ -141,7 +139,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="description col-md-6 col-sm-4 col-xs-12">
-					<h2>Hello, I am James</h2>
+					<h2>Hello, I am Filipe</h2>
 
 					<h4>Web Developer from Ireland</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.
@@ -596,7 +594,8 @@
 
 				<div class="col-md-8 col-md-offset-2">
 					<!--changes contact email in file mailer.php -->
-					<form id='contact-form' name='contact' method='post'><input type='hidden' name='form-name' value='contact'>
+					<form id='contact-form' name='contact' method='post'>
+						<input type='hidden' name='form-name' value='contact'>
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
@@ -679,12 +678,8 @@
 	<script src="assets/js/jquery.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/jquery.stellar.min.js"></script>
-	<script src="assets/js/text-rotate.js"></script>
-	<script src="assets/js/numscroller.js"></script>
 	<script src="assets/js/owl.carousel.min.js"></script>
-	<script src="assets/js/jquery.wow.min.js"></script>
 	<script src="assets/js/jquery.appear.js"></script>
-	<script src="assets/js/masonry/imagesloaded.pkgd.min.js"></script>
 	<script src="assets/js/progress-bar.min.js"></script>
 	<script src="assets/js/jquery.mixitup.js"></script>
 	<script src="assets/js/jquery.magnific-popup.min.js"></script>
