Formulario de contato

--- a/index.html
+++ b/index.html
@@ -575,19 +575,17 @@
 				<div class="address-icons col-md-8 col-md-offset-2">
 					<div class="col-md-4 col-sm-4">
 						<i class="fa fa-envelope-o fa-2x"></i>
-						<p>Filipe Morelliemail.com</p>
+						<p>morellitecinfo@gmail.com</p>
 					</div>
 
 					<div class="col-md-4 col-sm-4">
-						<i class="fa fa-map-marker fa-2x"></i>
-						<p>Banguntapan,
-							<br> Yogyakarta, ID 55198
-						</p>
+						<i class="fa fa-skype fa-2x"></i>
+						<p>morellinrt@outlook.com</p>
 					</div>
 
 					<div class="col-md-4 col-sm-4">
-						<i class="fa fa-phone fa-2x"></i>
-						<p>+62 123 456 7890</p>
+						<i class="fa fa-whatsapp fa-2x"></i>
+						<p>+55 (31) 98652-8270</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -599,19 +597,19 @@
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<input type="text" name="name" id="name" class="form-control" placeholder="Name" required="">
+									<input type="text" name="name" id="name" class="form-control" placeholder="Nome" required>
 									<p class="help-block text-danger">
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<input type="email" name="email" id="email" class="form-control" placeholder="Email" required="">
+									<input type="email" name="email" id="email" class="form-control" placeholder="E-mail" required>
 									<p class="help-block text-danger">
 								</div>
 							</div>
 						</div>
 						<div class="form-group">
-							<textarea name="message" id="message" class="form-control" rows="4" placeholder="Message..." required=""></textarea>
+							<textarea name="message" id="message" class="form-control" rows="4" placeholder="Mensagem..." minlength="10" required></textarea>
 							<p class="help-block text-danger">
 						</div>
 
@@ -665,7 +663,7 @@
 					</li>
 				</ul>
 
-				<p>© 2018 Filipe Morelli made by vavelo</p>
+				<p>© 2018 Filipe Morelli</p>
 			</div>
 		</div>
 	</footer>
