Serviços para baixo

--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
 										<a class="line smoth-scroll" href="#testimonial">Testimonial</a>
 									</li>
 									<li>
-										<a class="line smoth-scroll" href="#blog">Blog</a>
-									</li>
-									<li>
 										<a class="line smoth-scroll" href="#contact">Contact</a>
 									</li>
 								</ul>
@@ -390,51 +387,59 @@
 				<div class="col-md-12">
 					<div class="row">
 						<!-- services items -->
-						<div class="col-md-4 col-sm-6">
+						<div class="col-md-3 col-sm-6">
 							<div class="services-item">
 								<i class="fa fa-cubes fa-2x"></i>
 								<h4>Web Design</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.</p>
 							</div>
 						</div>
 
-						<div class="col-md-4 col-sm-6">
+						<div class="col-md-3 col-sm-6">
 							<div class="services-item">
-								<i class="fa fa-flask fa-2x"></i>
-								<h4>UI</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.</p>
+								<i class="fa fa-shopping-cart fa-2x"></i>
+								<h4>E-commerce</h4>
 							</div>
 						</div>
 
-						<div class="col-md-4 col-sm-6">
+						<div class="col-md-3 col-sm-6">
 							<div class="services-item">
 								<i class="fa fa-heart fa-2x"></i>
-								<h4>Front End</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.</p>
+								<h4>HTML, CSS, JS</h4>
 							</div>
 						</div>
 
-						<div class="col-md-4 col-sm-6">
+						<div class="col-md-3 col-sm-6">
+							<div class="services-item">
+								<i class="fa fa-code fa-2x"></i>
+								<h4>Back End (PHP e Node.js)</h4>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6">
 							<div class="services-item">
 								<i class="fa fa-diamond fa-2x"></i>
-								<h4>UX Design</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.</p>
+								<h4>UX Design (Ajustes e melhorias)</h4>
 							</div>
 						</div>
 
-						<div class="col-md-4 col-sm-6">
+						<div class="col-md-3 col-sm-6">
 							<div class="services-item">
 								<i class="fa fa-wordpress fa-2x"></i>
 								<h4>Wordpress</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.</p>
 							</div>
 						</div>
 
-						<div class="col-md-4 col-sm-6">
+						<div class="col-md-3 col-sm-6">
 							<div class="services-item">
 								<i class="fa fa-bolt fa-2x"></i>
-								<h4>SEO</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.</p>
+								<h4>SEO e Marketing</h4>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6">
+							<div class="services-item">
+								<i class="fa fa-connectdevelop fa-2x"></i>
+								<h4>Servidores (DNS, E-mail, etc.)</h4>
 							</div>
 						</div>
 					</div>
@@ -449,7 +454,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9 col-sm-6 col-xs-12">
-					<h2>Hire Me</h2>
+					<h2>Contrate-me</h2>
 
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc. Fusce
@@ -460,7 +465,7 @@
 				<!-- button -->
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<p>
-						<a href="#contact" class="btn btn-dark btn-lg smoth-scroll">Get in Touch</a>
+						<a href="#contact" class="btn btn-dark btn-lg smoth-scroll">CONTRATE-ME AGORA</a>
 					</p>
 				</div>
 			</div>
@@ -478,24 +483,23 @@
 						<ul class="slides">
 							<!-- testimoni items -->
 							<li>
-								<p class="author">John Pagiyai SH, Product Designer.</p>
-								<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis ipsum et ante tempor imperdiet. Sed eleifend metus
-									et nisl scelerisque, ut convallis sapien facilisis."
+								<p class="author">Gisele Ferreira</p>
+								<h2>"O Filipe demonstrou competência no atendimento, amplos conhecimentos técnicos, organização e qualidade em relação
+									aos serviços prestados."
 								</h2>
 							</li>
 
 							<li>
-								<p class="author">Yong Lek, Founder Abidas.</p>
-								<h2>"Morbi et vulputate orci. Nullam in venenatis risus. Aliquam nec orci elit. Sed dapibus eleifend enim, sed imperdiet
-									lacus eleifend quis. Nullam mollis, quam ac convallis semper."
+								<p class="author">Cinara Macedo</p>
+								<h2>"Todo e qualquer problema ele apresentou uma solução de imediato. Isto me deu uma segurança muito grande e a certeza
+									de contar com um excelente profissional."
 								</h2>
 
 							</li>
 
 							<li>
-								<p class="author">Bung Fefe, Actor</p>
-								<h2>"Cras blandit rutrum justo tincidunt iaculis. Ut purus sem, facilisis eget urna quis, commodo tempus ligula. Morbi
-									sagittis, erat sed imperdiet mattis, libero libero sodales."
+								<p class="author">Vitor Monteiro</p>
+								<h2>"O atendimento e disponibilidade foi fundamental para a entrega do trabalho para meu cliente."
 								</h2>
 							</li>
 						</ul>
@@ -506,70 +510,12 @@
 	</section>
 	<!-- END TESTIMONIAL -->
 
-	<!-- BLOG -->
-	<section id="blog">
-		<div class="container text-center">
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<h2>Blog Post</h2>
-				</div>
-
-				<!-- blog items -->
-				<div class="col-md-4 col-sm-6">
-					<div class="blog-item">
-						<a href="single.html" class="blog-img">
-							<img src="assets/img/blog/blog-1.jpg" class="img-responsive" alt="Blog 1">
-						</a>
-						<div class="blog-desc">
-							<h4>
-								<a href="single.html">Lorem ipsum dolor sit amet</a>
-							</h4>
-							<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-							<a href="single.html" class="btn btn-dark">Read more</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-sm-6">
-					<div class="blog-item">
-						<a href="single.html" class="blog-img">
-							<img src="assets/img/blog/blog-2.jpg" class="img-responsive" alt="Blog 2">
-						</a>
-						<div class="blog-desc">
-							<h4>
-								<a href="single.html">Lorem ipsum dolor sit amet</a>
-							</h4>
-							<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-							<a href="single.html" class="btn btn-dark">Read more</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-sm-6">
-					<div class="blog-item">
-						<a href="single.html" class="blog-img">
-							<img src="assets/img/blog/blog-3.jpg" class="img-responsive" alt="Blog 3">
-						</a>
-						<div class="blog-desc">
-							<h4>
-								<a href="single.html">Lorem ipsum dolor sit amet</a>
-							</h4>
-							<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-							<a href="single.html" class="btn btn-dark">Read more</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- END BLOG -->
-
 	<!-- CONTACT -->
 	<section id="contact">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h2>Contact Me</h2>
+					<h2>Meus contatos</h2>
 				</div>
 
 				<div class="address-icons col-md-8 col-md-offset-2">
@@ -614,15 +560,15 @@
 						</div>
 
 						<div class="col-md-12 col-xs-12">
-							<button id="submit" type="submit" name="submit" class="btn btn-dark">Send Message</button>
+							<button id="submit" type="submit" name="submit" class="btn btn-dark">Enviar Mensagem</button>
 						</div>
 
 						<div id="success" class="col-md-12 col-xs-12">
-							<p class="green textcenter">Your message was send, Thank you.</p>
+							<p class="green textcenter">Sua mensagem foi enviada, Obrigado entrarei em contato em breve!</p>
 						</div>
 
 						<div id="error" class="col-md-12 col-xs-12">
-							<p>Something maybe wrong please try again</p>
+							<p>Algo talvez errado, por favor tente novamente.</p>
 						</div>
 					</form>
 				</div>
