Mensagem de contrate-me

--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
 					<h2>Contrate-me</h2>
 
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc. Fusce
-						sit amet interdum metus, a interdum massa.
+						Conversamos, fazemos um orçamento e
+						<b>pagamento somente quando estiver pronto</b>.
 					</p>
 				</div>
 
