--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Filipe Morelli - Personal Portfolio</title>
+	<title>Filipe Morelli - Portfolio</title>
 	<link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 
 	<!-- CSS PLUGIN -->
@@ -72,19 +72,19 @@
 										<a class="line active smoth-scroll" href="#home">Home</a>
 									</li>
 									<li>
-										<a class="line smoth-scroll" href="#about">About</a>
+										<a class="line smoth-scroll" href="#about">Sobre</a>
 									</li>
 									<li>
 										<a class="line smoth-scroll" href="#portfolio">Portfolio</a>
 									</li>
 									<li>
-										<a class="line smoth-scroll" href="#services">Services</a>
+										<a class="line smoth-scroll" href="#services">Serviçõs</a>
 									</li>
 									<li>
-										<a class="line smoth-scroll" href="#testimonial">Testimonial</a>
+										<a class="line smoth-scroll" href="#testimonial">Testemunhos</a>
 									</li>
 									<li>
-										<a class="line smoth-scroll" href="#contact">Contact</a>
+										<a class="line smoth-scroll" href="#contact">Contato</a>
 									</li>
 								</ul>
 							</div>
@@ -112,7 +112,7 @@
 
 								<!-- home title -->
 								<div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
-									<h1>Hi, I'm Filipe Mprelli</h1>
+									<h1>Olá, Eu sou Filipe Morelli</h1>
 									<h3 id="text-rotator">
 										<div>Analista de Sistemas de Informação e Desenvolvedor FullStack</div>
 									</h3>
@@ -136,12 +136,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="description col-md-6 col-sm-4 col-xs-12">
-					<h2>Hello, I am Filipe</h2>
+					<h2>Olá, Eu sou Filipe</h2>
 
-					<h4>Web Developer from Ireland</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh felis, rutrum id eleifend nec, viverra ac nunc.
-						Fusce sit amet interdum metus, a interdum massa. Nullam gravida, elit sed mattis semper, libero leo convallis mi, et
-						elementum magna tortor sed tortor. Aliquam hendrerit metus non enim fringilla, eu molestie ante bibendum.
+					<h4>Analista de Sistemas de Informação e Desenvolvedor FullStack</h4>
+					<p>Sou um Profissional formado em Sistemas de Informação que já atua na área de TI a 7 anos. Especialista em soluções de
+						Desenvolvimento Web, e plataformas Mobile como: Android, iOS. Segundo lugar na olimpíada do conhecimento na área de
+						soluções web. Gosto de ajudar as pessoas a resolver seus problemas.
 					</p>
 
 					<!-- social media items -->
@@ -153,62 +153,38 @@
 						</li>
 						<li>
 							<a href="#">
-								<i class="fa fa-twitter"></i>
+								<i class="fa fa-google-plus"></i>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<i class="fa fa-instagram"></i>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-behance"></i>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-dribbble"></i>
+								<i class="fa fa-skype"></i>
 							</a>
 						</li>
 					</ul>
-
-					<!-- about button -->
-					<p>
-						<a href="#" class="btn btn-dark with-arrow smoth-scroll">My Resume
-							<i class="fa fa-download"></i>
-						</a>
-					</p>
 				</div>
 
 				<!-- facts counting -->
-				<div class=" facts col-md-5 col-sm-5 col-xs-12">
+				<div class=" facts col-md-6 col-sm-5 col-xs-12">
 					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="count-item">
-								<div class="numscroller" data-slno='1' data-min='0' data-max='300' data-delay='10' data-increment="5">300</div>
-								<div class="count-name-intro">Project done</div>
+								<div class="numscroller" data-slno='1' data-min='0' data-max='103' data-delay='10' data-increment="5">103</div>
+								<div class="count-name-intro">Projetos Feitos</div>
 							</div>
 						</div>
 
-						<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="count-item">
 								<div class="numscroller" data-slno='1' data-min='0' data-max='500' data-delay='10' data-increment="5">500</div>
-								<div class="count-name-intro">Cups of coffe</div>
+								<div class="count-name-intro">Copos de café</div>
 							</div>
 						</div>
 
-						<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="count-item">
-								<div class="numscroller" data-slno='1' data-min='0' data-max='120' data-delay='10' data-increment="5">120</div>
-								<div class="count-name-intro">Clients</div>
-							</div>
-						</div>
-
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<div class="count-item">
-								<div class="numscroller" data-slno='1' data-min='0' data-max='10' data-delay='1' data-increment="1">10</div>
-								<div class="count-name-intro">Awards</div>
+								<div class="numscroller" data-slno='1' data-min='0' data-max='86' data-delay='10' data-increment="5">86</div>
+								<div class="count-name-intro">Clientes Atendidos</div>
 							</div>
 						</div>
 					</div>
