--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
 										<a class="line smoth-scroll" href="#about">Sobre</a>
 									</li>
 									<li>
-										<a class="line smoth-scroll" href="#portfolio">Portfolio</a>
-									</li>
-									<li>
-										<a class="line smoth-scroll" href="#services">Serviçõs</a>
+										<a class="line smoth-scroll" href="#services">Serviços</a>
 									</li>
 									<li>
 										<a class="line smoth-scroll" href="#testimonial">Testemunhos</a>
@@ -199,46 +196,46 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h2>My Skills</h2>
+					<h2>Minhas Competências</h2>
+				</div>
+
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<div class="progress-box">
+						<p>HTML5, CSS3, JavaScript, jQuery
+							<span class="color-heading pull-right">99%</span>
+						</p>
+						<div class="progress">
+							<div class="progress-bar bg-color-base" role="progressbar" data-width="99"></div>
+						</div>
+					</div>
 				</div>
 
 				<!-- skills items -->
-				<div class="col-md-5 col-sm-6 col-xs-12">
+				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="progress-box">
-						<p>PHP
-							<span class="color-heading pull-right">87%</span>
+						<p>PHP, NodeJS e Mysql
+							<span class="color-heading pull-right">93%</span>
 						</p>
 						<div class="progress">
-							<div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
+							<div class="progress-bar bg-color-base" role="progressbar" data-width="93"></div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-5 col-sm-6 col-xs-12 skills-right">
+				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="progress-box">
-						<p>HTML5
-							<span class="color-heading pull-right">96%</span>
+						<p>Wordpress, Joomla, Drupal
+							<span class="color-heading pull-right">99%</span>
 						</p>
 						<div class="progress">
-							<div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
+							<div class="progress-bar bg-color-base" role="progressbar" data-width="99"></div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-5 col-sm-6 col-xs-12">
+				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="progress-box">
-						<p>JavaSript
-							<span class="color-heading pull-right">52%</span>
-						</p>
-						<div class="progress">
-							<div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-5 col-sm-6 col-xs-12 skills-right">
-					<div class="progress-box">
-						<p>Photoshop
+						<p>E-commerce e CMS
 							<span class="color-heading pull-right">77%</span>
 						</p>
 						<div class="progress">
@@ -246,111 +243,32 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</section>
-	<!-- END SKILLS -->
 
-	<!-- PORTFOLIO -->
-	<section id="portfolio">
-		<div class="container">
-			<div class="row">
-				<div data-aos="fade-up">
-					<div class="col-md-12 text-center">
-						<h2>Selected Project</h2>
-					</div>
-
-					<div class="col-md-12 col-sm-12">
-						<!-- portfolio menu -->
-						<div class="filter-btn col-md-12 text-center">
-							<div class="filter active" data-filter="all">All</div>
-							<div class="filter" data-filter=".website">Website</div>
-							<div class="filter" data-filter=".photography">Photography</div>
-							<div class="filter lst-cld" data-filter=".design">Design</div>
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<div class="progress-box">
+						<p>Marketing Digital (SEO, E-mail, Afiliações)
+							<span class="color-heading pull-right">85%</span>
+						</p>
+						<div class="progress">
+							<div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
 						</div>
+					</div>
+				</div>
 
-						<!-- portfolio items -->
-						<div id="port-image" class="container">
-							<div class="row">
-								<div class="website grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets/img/portfolio/portfolio-1.jpg" class="image-popup">
-										<figure class="port-desc">
-											<img src="assets/img/portfolio/portfolio-1.jpg" class="img-responsive" alt="Work 1">
-											<figcaption>
-												<h4>Project One</h4>
-												<h5>Website</h5>
-											</figcaption>
-										</figure>
-									</a>
-								</div>
-
-								<div class="website grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets/img/portfolio/portfolio-2.jpg" class="image-popup">
-										<figure class="port-desc">
-											<img src="assets/img/portfolio/portfolio-2.jpg" class="img-responsive" alt="Work 1">
-											<figcaption>
-												<h4>Project Two</h4>
-												<h5>Website</h5>
-											</figcaption>
-										</figure>
-									</a>
-								</div>
-
-								<div class="photography grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets/img/portfolio/portfolio-3.jpg" class="image-popup">
-										<figure class="port-desc">
-											<img src="assets/img/portfolio/portfolio-3.jpg" class="img-responsive" alt="Work 1">
-											<figcaption>
-												<h4>Project Three</h4>
-												<h5>Photography</h5>
-											</figcaption>
-										</figure>
-									</a>
-								</div>
-
-								<div class="photography grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets/img/portfolio/portfolio-4.jpg" class="image-popup">
-										<figure class="port-desc">
-											<img src="assets/img/portfolio/portfolio-4.jpg" class="img-responsive" alt="Work 1">
-											<figcaption>
-												<h4>Project Four</h4>
-												<h5>Photography</h5>
-											</figcaption>
-										</figure>
-									</a>
-								</div>
-
-								<div class="design grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets/img/portfolio/portfolio-5.jpg" class="image-popup">
-										<figure class="port-desc">
-											<img src="assets/img/portfolio/portfolio-5.jpg" class="img-responsive" alt="Work 1">
-											<figcaption>
-												<h4>Project Five</h4>
-												<h5>Design</h5>
-											</figcaption>
-										</figure>
-									</a>
-								</div>
-
-								<div class="design grid mix col-md-4 col-sm-6 col-xs-12">
-									<a href="assets/img/portfolio/portfolio-6.jpg" class="image-popup">
-										<figure class="port-desc">
-											<img src="assets/img/portfolio/portfolio-6.jpg" class="img-responsive" alt="Work 1">
-											<figcaption>
-												<h4>Project Six</h4>
-												<h5>Design</h5>
-											</figcaption>
-										</figure>
-									</a>
-								</div>
-							</div>
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<div class="progress-box">
+						<p> Servidores (DNS, E-mail, FTP, SSH, etc.)
+							<span class="color-heading pull-right">90%</span>
+						</p>
+						<div class="progress">
+							<div class="progress-bar bg-color-base" role="progressbar" data-width="90"></div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- END PORTFOLIO -->
+	<!-- END SKILLS -->
 
 	<!-- SERVICES -->
 	<section id="services">
