--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 
     <!-- CSS PLUGIN -->
-    <link rel="stylesheet" href="assets/css/site.min.css">
+    <link rel="stylesheet" href="assets/css/main.min.css">
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Hind:600|Lato:300,400" rel="stylesheet">
@@ -504,9 +504,6 @@
     <!-- JS PLUGIN -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/min/scripts.min.js"></script>
-    <script type="text/javascript">
-        $('.player').mb_YTPlayer();
-    </script>
 </body>
 
 </html>
